# treesitter-vba

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package.json  plan.md  tree-sitter.json
.github/workflows/: ci.yml  release.yml
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
examples/: ClassModule.cls  ComReference.bas  ErrorHandling.bas  FormEvent.bas  Preprocessor.bas  Sample.bas
queries/: folds.scm  highlights.scm  indents.scm  locals.scm  textobjects.scm
test/corpus/: arrays.txt  calls.txt  declarations.txt  declare.txt  highlights_preprocessor_condition.txt  indents_preprocessor.txt  literals.txt  locals_preprocessor.txt  modules.txt  procedures.txt  statements.txt
test/highlight/: basics.vba  comments.bas  control_flow.bas  declarations.bas  deftype.bas  error_handling.bas  event.bas  exit_statement.bas  gosub.bas  gosub_return.bas  goto_on_error.bas  implements.bas  inline_if.bas  keywords.bas  literals.bas  module_attributes.bas  on_error_resume.bas  operators.bas  operators.vba  preprocessor.vba  procedures.bas  types.bas  while_wend.bas  with_blocks.bas  withevents.bas
