[package]
name = "tree-sitter-vba"
description = "VBA grammar for tree-sitter"
version = "0.1.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "vba"]
categories = ["parser-implementations", "parsing", "text-editors"]
# TODO: replace this placeholder with the actual repository URL before publishing to crates.io.
repository = "https://github.com/tree-sitter/tree-sitter-vba"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
